@@ -7,6 +7,6 @@ Download
 --------
 Oggextract is in the public domain, so you can do anything with it. Anything at all.
 
-* [Windows binary](https://moriya.ca/oggextract/oggextract.zip) (built with cygwin, last updated October 21, 2012)
-* [C source](https://github.com/arkeet/oggextract/blob/master/oggextract.c). You should be able to compile it under most Unix-like environments, including cygwin, but not mingw.
-* [Changelog](https://github.com/arkeet/oggextract/blob/master/CHANGELOG.txt).
+You should be able to compile it under most Unix-like environments, including cygwin or msys2, but not mingw.
+
+Forked from: https://github.com/arkeet/oggextract
